misc design changes

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,14 +3,14 @@
 <div
     class="hidden lg:flex flex-col justify-start items-end sticky top-0 col-span-2 col-start-2 col-end-4"
 >
-    <ul class="text-xl font-gustavo mb-4 flex flex-col items-end">
+    <ul class="text-xl font-gustavo mb-4 flex flex-col items-end gap-2">
         {% for route in config.extra.routes %}
             {% if current_path == route.path %}
-                <li class="pt-2">
+                <li class="">
                     <a href="{{ route.path }}">{{ route.name }}</a>
                 </li>
             {% else %}
-                <li class="text-gray-500 pt-2 hover:text-black">
+                <li class="text-gray-500 hover:text-black">
                     <a href="{{ route.path }}">{{ route.name }}</a>
                 </li>
             {% endif %}
@@ -28,19 +28,23 @@
 
 <!-- mobile -->
 <div
-    class="lg:hidden font-gustavo col-span-4 sticky bg-gray-50 top-4 z-10 rounded-md border p-2 select-none drop-shadow-xl"
->
+    class="lg:hidden font-gustavo col-span-4 .sticky .bg-gray-50 top-4 z-10 .rounded-md .border py-2 select-none .drop-shadow-xl"
+y>
     <div class="nav flex items-center gap-1">
+        {% set found = false %}
         {% for route in config.extra.routes %}
             {% if route.path == current_path %}
-                <span class="pb-1 inline-block cursor-pointer"> 
-                    {{- route.name -}} 
-                </span>
+                <span class="pb-1 inline-block cursor-pointer"> {{- route.name -}} </span>
+                {% set_global found = true %}
             {% endif %}
         {% endfor %}
+        {% if not found %}
+            <span class="pb-1 inline-block cursor-pointer"> navigate </span>
+        {% endif %}
         <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4 transition-all duration-150 fill-current text-orange-600"
+            class="h-4 w-4 transition-all duration-300 fill-current text-orange-600"
+            id="dropdown"
             viewBox="0 0 256 256"
         >
             <rect width="256" height="256" fill="none" />
@@ -55,24 +59,22 @@
             />
         </svg>
 
-        <div class="w-full flex items-center justify-between">
+        <!-- <div class="w-full flex items-center justify-between">
             {% if page.title and page.date %}
-                <span class="pb-1 self-center cursor-pointer truncate"
-                    >{{ page.title }}</span
-                >
-            {% endif %}
+            <span class="pb-1 self-center cursor-pointer truncate">{{ page.title }}</span>
+        {% endif %}
             {% if page.date %}
-                <span class="pb-[0.5] font-dm text-sm"
-                    >{{ page.date | date(format="%d/%m - %y") }}</span
-                >
-            {% endif %}
-        </div>
+            <span class="pb-[0.5] font-dm text-sm"
+                >{{ page.date | date(format="%d/%m - %y") }}</span
+            >
+        {% endif %}
+        </div> -->
     </div>
 
     <div
         class="menu overflow-hidden flex flex-col transition-all duration-150 ease-in-out max-h-0"
     >
-        <hr class="mt-2 w-full border-t border-gray-400" />
+        <!-- <hr class="mt-2 w-full border-t border-gray-400" /> -->
         {% for route in config.extra.routes %}
             {% if route.path != current_path %}
                 <a href="{{ route.path }}" class="hover:text-black text-gray-400 pt-1"
@@ -86,7 +88,7 @@
 <script>
     const nav = document.querySelector(".nav");
     const menu = document.querySelector(".menu");
-    const nav_icon = document.querySelector("svg");
+    const nav_icon = document.getElementById("dropdown");
 
     nav.addEventListener("click", () => {
         menu.classList.toggle("max-h-[1000px]");
