--- a/styles/md.css
+++ b/styles/md.css
@@ -10,19 +10,19 @@ h4 {
 }
 
 .markdown h1 {
-    @apply text-4xl mb-6 mt-8;
+    @apply text-3xl mb-6 mt-8;
 }
 
 .markdown h2 {
-    @apply text-3xl mb-5 mt-7;
+    @apply text-2xl mb-5 mt-7;
 }
 
 .markdown h3 {
-    @apply text-2xl mb-4 mt-6;
+    @apply text-xl mb-4 mt-6;
 }
 
 .markdown h4 {
-    @apply text-xl mb-3 mt-5;
+    @apply text-lg mb-3 mt-5;
 }
 
 /* Paragraphs and spacing */
