--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,31 +1,23 @@
 {% extends "base.html" %}
-
 {% block content %}
-    <div class="hidden lg:block col-span">
-        <div class="grid grid-row">
-            <a href="{{ config.base_url }}/blog">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-4 w-4 text-gray-500 hover:text-gray-600"
-                    fill="#000000"
-                    viewBox="0 0 256 256"
-                >
-                    <path d="M112,56V200L40,128Z" opacity="0.2"></path>
-                    <path
-                        d="M216,120H120V56a8,8,0,0,0-13.66-5.66l-72,72a8,8,0,0,0,0,11.32l72,72A8,8,0,0,0,120,200V136h96a8,8,0,0,0,0-16ZM104,180.69,51.31,128,104,75.31Z"
-                    ></path>
-                </svg>
-            </a>
-            <div class="flex items-center justify-between">
-                <h1 class="text-3xl font-gustavo mb-2">{{ page.title }}</h1>
-                {% if page.date %}
-                    <span class="font-halyard"
-                        >{{ page.date | date(format="%d/%m - %y") }}</span
-                    >
-                {% endif %}
-            </div>
-        </div>
-        <hr class="w-full border-dashed border-gray-500 mb-6" />
+    <div class="flex justify-between items-center">
+        <a href="{{ config.base_url }}/blog">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="fill-current h-4 w-4 text-gray-500 hover:text-gray-600 transition duration-300"
+                viewBox="0 0 256 256"
+            >
+                <path d="M112,56V200L40,128Z" opacity="0.2"></path>
+                <path
+                    d="M256,120H120V56a8,8,0,0,0-13.66-5.66l-72,72a8,8,0,0,0,0,11.32l72,72A8,8,0,0,0,120,200V136h136a8,8,0,0,0,0-16ZM104,180.69,51.31,128,104,75.31Z"
+                ></path>
+            </svg>
+        </a>
+        {% if page.date %}
+            <span class="font-dm text-sm text-gray-500">{{ page.date | date(format="%d/%m - %y") }}</span>
+        {% endif %}
     </div>
+    <hr class="w-full border-fill border-gray-300 mb-5" />
+    <h1 class="text-3xl font-gustavo mb-6">{{ page.title }}</h1>
     <div class="markdown">{{ page.content | safe }}</div>
 {% endblock content %}
