add scratchpad(fly.html), misc changes

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -40,7 +40,7 @@
             {% endif %}
         {% endfor %}
         {% if not found %}
-            <span class="pb-1 inline-block cursor-pointer"> navigate </span>
+            <span class="pb-1 inline-block cursor-pointer"> {{ page.title }} </span>
         {% endif %}
 
         <svg
