add back to top link

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -23,7 +23,7 @@
         </div>
         <hr class="w-full border-t border-gray-300" />
     </div>
-    <p class="font-bold font-dm text-sm opacity-70">Coimbatore, IN</p>
+    <p class="font-dm text-sm opacity-70">Coimbatore, IN</p>
 </div>
 
 <!-- mobile -->
