--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% import "macros.html" as macros %}
 <!doctype html>
-<html lang="en">
+<html class="scroll-smooth" lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
