--- a/templates/posts.html
+++ b/templates/posts.html
@@ -11,5 +11,9 @@
     <div class="lg:hidden font-dm text-sm text-gray-500 pb-4">{{ page.date | date(format="%d/%m - %y") }}</div>
     {% endif %}
     <div class="markdown">{{ page.content | safe }}</div>
+    <hr class="bg-gray-400 border-none h-[1px] my-10">
+    <footer class="flex flex-col items-end justify-center gap-8 mb-8">
+        <a href="#" class="text-md text-gray-700 hover:text-gray-500 underline decoration-dashed cursor-pointer transition-all duration-300">back to top</a>
+    </footer>
 </div>
 {% endblock %}
