--- a/templates/posts.html
+++ b/templates/posts.html
@@ -12,7 +12,17 @@
     {% endif %}
     <div class="markdown">{{ page.content | safe }}</div>
     <hr class="bg-gray-400 border-none h-[1px] my-10">
-    <footer class="flex flex-col items-end justify-center gap-8 mb-8">
+    <footer class="flex flex-col items-end justify-center gap-8 mb-8 font-dm">
+        {% if page.taxonomies %}
+            <div class="flex gap-3 self-start items-center">
+                {% for term, values in page.taxonomies %}
+                    <span class="text-base text-zinc-600 underline decoration-wavy decoration-gray-600">{{- term | capitalize -}}: </span>
+                    {% for value in values %}
+                    <a class="px-1 rounded-lg text-sm/6 ring-1 ring-blue-500 bg-blue-200 text-blue-500 hover:text-orange-500" href="{{ get_taxonomy_url(kind=term, name=value) }}">#{{ value }}</a>
+                    {% endfor %}
+                {% endfor %}
+            </div>
+        {% endif %}
         <a href="#" class="text-md text-gray-700 hover:text-gray-500 underline decoration-dashed cursor-pointer transition-all duration-300">back to top</a>
     </footer>
 </div>
