--- a/templates/section.html
+++ b/templates/section.html
@@ -16,7 +16,7 @@
                     </div>
                     <ul>
                         {% for post in posts %}
-                            <li class="flex justify-between text-md pb-3">
+                            <li class="flex justify-between text-md pb-3 font-manrope">
                                 <div class="flex flex-col">
                                     <span class="underline hover:decoration-gray-400 decoration-gray-600"><a href="{{ post.permalink }}">{{ post.title }}</a></span>
                                     {% if post.description %}
